# research-copilot

./: .gitignore  README-prod.md  README.md  alter_table.py  nginx-prod.conf
code/backend/: API_Keys_Create_README.md  Dockerfile  RAG_README.md  README.md  alembic_migration.sql  api_endpoints_flowchart.md  init-db.sql  locustfile.py  migrate_users_table.sql  pyproject.toml  pytest.ini
code/backend/airflow/dags/: README.md  enterprise_paper_ingestion.py
code/backend/docs/: Admin_Cache_Clear_README.md  Admin_Health_Detailed_README.md  Admin_Index_Rebuild_README.md  Admin_Logs_README.md  Admin_Search_Stats_README.md  Admin_Stats_README.md  Admin_Users_Stats_README.md  Analytics_Audit_Trail_README.md  Analytics_Billing_Invoice_README.md  Analytics_Billing_README.md  Analytics_Cache_Clear_README.md  Analytics_Circuit_Breakers_README.md  Analytics_Circuit_Breakers_Reset_README.md  Analytics_Health_README.md  Analytics_Metrics_README.md  Analytics_Monitoring_Dashboard_README.md  Analytics_Performance_README.md  Analytics_Rate_Limits_Reset_README.md  Analytics_Rate_Limits_User_README.md  Analytics_Search_Analytics_README.md  Analytics_Usage_Organization_README.md  Analytics_Usage_Trends_README.md  Analytics_Usage_User_README.md  Auth_Login_README.md  Auth_Logout_All_README.md  Auth_Logout_README.md  Auth_Me_README.md  Auth_Refresh_README.md  Auth_Register_README.md  Auth_Tokens_README.md  Ingestion_Arxiv_README.md  Ingestion_Failed_README.md  Ingestion_Job_Cancel_README.md  Ingestion_Job_Status_README.md  Ingestion_Jobs_List_README.md  Ingestion_Process_Pdf_README.md  Ingestion_Retry_Failed_README.md  Ingestion_Stats_README.md  Ingestion_Unprocessed_README.md  Papers_Create_README.md  (+30 more)
code/backend/scripts/: README_test_endpoints_e2e.md  alter.py  check_admin_user.py  check_db.py  clear_cache.py  create_superuser.py  create_test_db.py  extract_endpoints.py  test_observability.sh  update_admin_password.py  verify_admin_user.py
code/backend/src/: __init__.py  config.py  database.py  main.py  middlewares.py
code/backend/src/middlewares/: api_key_auth.py  api_versioning.py  error_handling.py  organization.py  tiered_rate_limit.py  validation.py
code/backend/src/models/: __init__.py  audit.py  paper.py  refresh_token.py  role.py  user.py
code/backend/src/repositories/: paper.py
code/backend/src/routers/: __init__.py  admin.py  analytics.py  api_keys.py  audit.py  auth.py  health.py  ingestion.py  organizations.py  papers.py  ping.py  rag.py  roles.py  search.py
code/backend/src/schemas/: __init__.py  admin.py  arxiv.py  auth.py  paper.py  pdf_parser.py  rag.py  (+2 more)
code/backend/ui/: app.py
(+102 files in other folders)
