[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-copilot"
version = "0.1.0"
description = "Enterprise-grade Research Copilot system with OpenRouter DeepSeek integration"
authors = [
    {name = "Research Copilot Team", email = "team@researchcopilot.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "opensearch-py>=2.4.0",
    "redis>=5.0.0",
    "PyJWT>=2.0.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.19.0",
    "openai>=1.0.0",  # For OpenRouter compatibility
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    # Data ingestion dependencies
    "docling>=0.1.0",
    "pypdfium2>=4.0.0",
    "celery>=5.3.0",  # For background processing
    "beautifulsoup4>=4.12.0",  # For HTML parsing if needed
    "lxml>=4.9.0",  # For XML parsing
    "aiohttp>=3.9.0",  # For async HTTP requests
    "tenacity>=8.2.0",  # For retry logic
    "scikit-learn>=1.3.0",  # For similarity calculations
    "python-dateutil>=2.8.0",  # For date parsing
    "bleach>=6.1.0",  # For HTML sanitization
    "langfuse>=2.0.0,<3.0.0"  # For LLM observability and tracing
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "locust>=2.15.0",
    "faker>=20.0.0",
    "freezegun>=1.2.0",
    "responses>=0.24.0",
    "testcontainers>=3.7.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"